--- a/WebAPI/src/WebAPI.Presentation/WebAPI.Presentation.csproj
+++ b/WebAPI/src/WebAPI.Presentation/WebAPI.Presentation.csproj
@@ -1,30 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-        <LangVersion>latest</LangVersion>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\WebAPI.Domain.Core\WebAPI.Domain.Core.csproj"/>
-        <ProjectReference Include="..\WebAPI.Infrastructure.Data\WebAPI.Infrastructure.Data.csproj"/>
+        <ProjectReference Include="..\WebAPI.Domain.Core\WebAPI.Domain.Core.csproj" />
+        <ProjectReference Include="..\WebAPI.Infrastructure.Data\WebAPI.Infrastructure.Data.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Controllers"/>
-        <Folder Include="Identity"/>
-        <Folder Include="Photos"/>
+        <Folder Include="Controllers" />
+        <Folder Include="Identity" />
+        <Folder Include="Photos" />
     </ItemGroup>
 
 </Project>
