--- a/WebAPI/src/WebAPI.Presentation/WebAPI.Presentation.csproj
+++ b/WebAPI/src/WebAPI.Presentation/WebAPI.Presentation.csproj
@@ -5,27 +5,30 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="NLog" Version="4.7.13" />
-        <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="NLog" Version="4.7.13"/>
+        <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0"/>
+        <PackageReference Include="Serilog.AspNetCore" Version="4.1.0"/>
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0"/>
+        <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\WebAPI.Domain.Core\WebAPI.Domain.Core.csproj" />
-        <ProjectReference Include="..\WebAPI.Infrastructure.Data\WebAPI.Infrastructure.Data.csproj" />
+        <ProjectReference Include="..\WebAPI.Domain.Core\WebAPI.Domain.Core.csproj"/>
+        <ProjectReference Include="..\WebAPI.Infrastructure.Data\WebAPI.Infrastructure.Data.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Controllers" />
-        <Folder Include="Identity" />
-        <Folder Include="Photos" />
+        <Folder Include="Controllers"/>
+        <Folder Include="Identity"/>
+        <Folder Include="Photos"/>
     </ItemGroup>
 
 </Project>
