feat: user registration

--- a/WebAPI/src/WebAPI.Presentation/WebAPI.Presentation.csproj
+++ b/WebAPI/src/WebAPI.Presentation/WebAPI.Presentation.csproj
@@ -28,6 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="Authentication"/>
         <Folder Include="Controllers"/>
         <Folder Include="Identity"/>
         <Folder Include="Photos"/>
