--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
       "axios": "^1.6.7",
       "core-js": "^3.8.3",
       "vue": "^3.2.13",
-      "vuex": "^4.1.0"
+      "vue-loader": "^15.10.0",
+      "vuex": "^4.0.2"
    },
    "devDependencies": {
       "@babel/core": "^7.12.16",
