feat(client): price filters

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -7,6 +7,12 @@
       "paths": {
          "@/*": [
             "src/*"
+         ],
+         "@components*": [
+            "src/components/*"
+         ],
+         "@filters*": [
+            "src/filters/*"
          ]
       },
       "lib": [
