--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,18 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"autoprefixer": "^10.4.18",
 		"axios": "^1.6.7",
 		"core-js": "^3.8.3",
 		"json-server": "^1.0.0-alpha.23",
+		"postcss": "^8.4.36",
+		"vee-validate": "^4.12.6",
 		"vue": "^3.2.13",
 		"vue-loader": "^17.4.2",
 		"vue-router": "^4.3.0",
 		"vuex": "^4.0.2",
-		"webpack": "^5.90.3"
+		"webpack": "^5.90.3",
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.16",
