--- a/WebAPI/WebAPI.Authentication/appsettings.json
+++ b/WebAPI/WebAPI.Authentication/appsettings.json
@@ -1,19 +1,19 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(local);Initial Catalog=EmployeeDB;Persist Security Info=false;Integrated Security=True;MultipleActiveResultSets=True;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
-  "JwtConfig": {
-    "Secret": "qwertyuiopasdfghjklzxcvbnm123456",
-    "Issuer": "https://localhost:4021;http://localhost:4022",
-    "Audience": "https://localhost:5001;http://localhost:5000",
-    "TokenLifeTime": "3600"
-  }
+   "ConnectionStrings": {
+      "DefaultConnection": "Data Source=(local); Initial Catalog=EmployeeDB; Persist Security Info=false; Integrated Security=True; Multiple Active Result Sets=True"
+   },
+   "Logging": {
+      "LogLevel": {
+         "Default": "Information",
+         "Microsoft": "Warning",
+         "Microsoft.Hosting.Lifetime": "Information"
+      }
+   },
+   "AllowedHosts": "*",
+   "JwtConfig": {
+      "Secret": "qwertyuiopasdfghjklzxcvbnm123456",
+      "Issuer": "https://localhost:4021;http://localhost:4022",
+      "Audience": "https://localhost:5001;http://localhost:5000",
+      "TokenLifeTime": "3600"
+   }
 }
