--- a/WebAPI/WebAPI.Authentication/appsettings.json
+++ b/WebAPI/WebAPI.Authentication/appsettings.json
@@ -10,10 +10,10 @@
       }
    },
    "AllowedHosts": "*",
-   "JwtConfig": {
+   "JwtOptions": {
       "Secret": "qwertyuiopasdfghjklzxcvbnm123456",
       "Issuer": "https://localhost:4021;http://localhost:4022",
       "Audience": "https://localhost:5001;http://localhost:5000",
-      "TokenLifeTime": "3600"
+      "TokenLifeTime": "12"
    }
 }
