--- a/WebAPI/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI/WebAPI.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.0" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.7" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
@@ -26,6 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Infrastructure" />
       <Folder Include="wwwroot" />
     </ItemGroup>
 
