--- a/WebAPI/WebAPI.Authentication/WebAPI.Authentication.csproj
+++ b/WebAPI/WebAPI.Authentication/WebAPI.Authentication.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1" />
+        <PackageReference Include="Dapper" Version="2.0.123" />
         <PackageReference Include="MediatR" Version="12.2.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
@@ -25,6 +26,7 @@
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
         <PackageReference Include="Serilog.Exceptions" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
     </ItemGroup>
 
