refactor(server): auth migrations

--- a/WebAPI/WebAPI.Authentication/appsettings.json
+++ b/WebAPI/WebAPI.Authentication/appsettings.json
@@ -1,6 +1,6 @@
 {
    "ConnectionStrings": {
-      "DefaultConnection": "Data Source=(local); Initial Catalog=EmployeeDB; Persist Security Info=false; Integrated Security=True; Multiple Active Result Sets=True"
+      "DefaultConnection": "Data Source=(local); Initial Catalog=EmployeeDB; Persist Security Info=false; Integrated Security=True;"
    },
    "Logging": {
       "LogLevel": {
